--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.4.4",
+    "@fontsource/roboto": "^4.5.3",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
     "@react-icons/all-files": "^4.1.0",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.6.0",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.9",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0"
   }
