--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.5",
+    "react-use-clipboard": "1.0.7",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
